--- a/ixsight/index.mjml
+++ b/ixsight/index.mjml
@@ -2,7 +2,7 @@
   <mj-head> </mj-head>
 
   <mj-body>
-    <mj-section background-color="#FFFFFF">
+    <!-- <mj-section background-color="#FFFFFF">
       <mj-column>
         <mj-text line-height="1.2" align="center"
           ><h1>
@@ -12,7 +12,7 @@
           </h1></mj-text
         >
       </mj-column>
-    </mj-section>
+    </mj-section> -->
     <mj-section background-color="#FFFFFF" padding-bottom="0">
       <mj-column>
         <mj-image
