--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -51,7 +51,7 @@
     </mj-section>
 
     <mj-section background-color="#171717">
-      <mj-column>
+      <mj-column padding="24px 0">
         <mj-text
           color="#FFFFFF"
           align="center"
