--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -329,5 +329,46 @@
         </mj-text>
       </mj-column>
     </mj-section>
+
+    <mj-section background-color="#171717">
+      <mj-column padding="0">
+        <mj-button
+          align="right"
+          background-color="#171717"
+          border="2px solid white"
+          ><mj-text
+            color="#FFFFFF"
+            align="left"
+            line-height="1.4"
+            font-family="'Josefin Sans', sans-serif;"
+            font-size="20px"
+            font-weight="500"
+            text-transform="uppercase"
+            padding-bottom="0"
+          >
+            DRINK COMPANIES
+          </mj-text></mj-button
+        >
+      </mj-column>
+      <mj-column padding="0">
+        <mj-button
+          align="left"
+          background-color="#171717"
+          border="2px solid white"
+          ><mj-text
+            color="#FFFFFF"
+            align="left"
+            line-height="1.4"
+            font-family="'Josefin Sans', sans-serif;"
+            font-size="20px"
+            font-weight="500"
+            text-transform="uppercase"
+            padding-bottom="0"
+          >
+            RESTAURANTS BARS
+          </mj-text></mj-button
+        >
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
