--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -7,30 +7,30 @@
   </mj-head>
 
   <mj-body>
-    <mj-section background-color="#F1F5F9" padding="0">
+    <mj-section background-color="#171717" padding="0">
       <mj-column>
         <mj-navbar
           base-url="https://misterbamboostraws.com"
           hamburger="hamburger"
-          ico-color="#000000"
+          ico-color="#FFFFFF"
           ico-font-size="20px"
         >
-          <mj-navbar-link href="/#whybamboo" color="#000000" font-size="10px"
+          <mj-navbar-link href="/#whybamboo" color="#FFFFFF" font-size="10px"
             >WHY US</mj-navbar-link
           >
           <mj-navbar-link
             href="/#laserbranding"
-            color="#000000"
+            color="#FFFFFF"
             font-size="10px"
             >BRANDING</mj-navbar-link
           >
-          <mj-navbar-link href="/#packaging" color="#000000" font-size="10px"
+          <mj-navbar-link href="/#packaging" color="#FFFFFF" font-size="10px"
             >PACKGING</mj-navbar-link
           >
-          <mj-navbar-link href="/#shop" color="#000000" font-size="10px"
+          <mj-navbar-link href="/#shop" color="#FFFFFF" font-size="10px"
             >SHOP</mj-navbar-link
           >
-          <mj-navbar-link href="/#contact" color="#000000" font-size="10px"
+          <mj-navbar-link href="/#contact" color="#FFFFFF" font-size="10px"
             >CONTACT</mj-navbar-link
           >
         </mj-navbar>
@@ -330,13 +330,9 @@
       </mj-column>
     </mj-section>
 
-    <mj-section background-color="#171717">
+    <mj-section background-color="#171717" padding="24px 0">
       <mj-column>
-        <mj-button
-          align="right"
-          background-color="#171717"
-          border="2px solid white"
-          padding="24px 10px"
+        <mj-button background-color="#171717" border="2px solid white"
           ><mj-text
             color="#FFFFFF"
             align="left"
@@ -352,11 +348,7 @@
         >
       </mj-column>
       <mj-column>
-        <mj-button
-          align="left"
-          background-color="#171717"
-          border="2px solid white"
-          padding="24px 10px"
+        <mj-button background-color="#171717" border="2px solid white"
           ><mj-text
             color="#FFFFFF"
             align="left"
